# ios-demo

./: .bazeliskrc  .gitignore  BUILD  Gemfile  MODULE.bazel  Podfile  README.md  lottie.BUILD
.github/workflows/: test.yaml
SIP.xcodeproj/: project.pbxproj
SIP.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
SIPUITests/: SIPUITestsLaunchTests.swift
fastlane/: Appfile  Fastfile  Snapfile  report.xml
ios-demo/: ContentView.swift  ios_demoApp.swift
ios-demo.xcodeproj/: project.pbxproj
ios-demo.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios-demo.xcodeproj/xcshareddata/xcschemes/: ios-demo.xcscheme
ios-demo/Resources/: Info.plist
ios-demoTests/: ios_demoTests.swift
ios-demoUITests/: ios_demoUITests.swift  ios_demoUITestsLaunchTests.swift
